# Studies

./: README.md
zad_6/: CMakeLists.txt  Matrix.h  anim_test.cpp  drawing.cpp  drawing.h  figure.cpp  figure.h
zad_6/lib/graph_lib/: GUI.cpp  Graph.cpp  Graph.h  Simple_window.h  Window.cpp  fltk.h
zad_7/: CMakeLists.txt  main.cpp  myWindow.cpp  myWindow.h
zad_7/lib/graph_lib/: CMakeLists.txt  Simple_window.cpp
zad_8/: CMakeLists.txt  image.cpp  image.h  main.cpp
zad_9/: CMakeLists.txt  image.cpp  image.h  main.cpp  zad_8.cpp  zad_x.cpp
